--- a/intents.yml
+++ b/intents.yml
@@ -69,7 +69,7 @@ exit:
 byletters:
     root:
         %lemma
-        (прочитать|прочесть|сказать)? (это)? (слово)? $Word? по буквам
+        (прочитать|прочесть|сказать|произнести|произносить)? (это)? (слово)? $Word? по буквам
     $Word:
         .
     slots:
